api/src/main/java/com/example/api/error/exception/EntityNotFoundException.java
package com.example.api.error.exception;

public class EntityNotFoundException extends Exception {

    public EntityNotFoundException(String message) {
        super(message);
    }
}
